# opentelemetry-python-contrib

./: .gitignore  dev-requirements.txt
instrumentation-genai/: README.md
instrumentation-genai/opentelemetry-genai-sdk/: .gitignore  pyproject.toml
instrumentation-genai/opentelemetry-instrumentation-langchain/: .gitignore  pyproject.toml
instrumentation-genai/opentelemetry-instrumentation-langchain-alpha/: pyproject.toml
instrumentation-genai/opentelemetry-instrumentation-langchain-dev/: README.rst
util/: ARCHITECTURE_RECOMMENDATION.md  PYTHON39_COMPATIBILITY_FIXES.md  README.architecture.packages.md  README.architecture.packages.txt  architecture_demo.py  architecture_demo_simple.py  evals.refactoring.md  types_redesign.py
util/opentelemetry-util-genai-dev/: GENERATORS.rst  README.architecture.md  README.evaluation.results.refactoring.md  README.implementation-findings.md  README.refactoring.agent-types.md  README.refactoring.debugging.md  README.refactoring.emitters.demo-scenarios.md  README.refactoring.emitters.md  README.refactoring.evaluators.md  README.refactoring.extra-metrics.md  README.refactoring.span_context.md  README.refactoring.span_context_codex.md  README.refactoring.steps.md  README.refactoring.telemetry.md  (+7 more)
util/opentelemetry-util-genai-evals-deepeval/: README.rst  pyproject.toml
util/opentelemetry-util-genai-evals-deepeval/src/opentelemetry/util/evaluator/: deepeval.py  deepeval_adapter.py  deepeval_metrics.py  deepeval_runner.py
util/opentelemetry-util-genai-evals-deepeval/src/opentelemetry/util/genai/evals/: deepeval.py
util/opentelemetry-util-genai-evals-deepeval/tests/: test_deepeval_evaluator.py  test_deepeval_metric_name_variants.py  test_deepeval_sentiment_metric.py
util/opentelemetry-util-genai-traceloop-translator/: .gitignore  README.rst  pyproject.toml  requirements-examples.txt  requirements-tests.txt
util/opentelemetry-util-genai-traceloop-translator/.deepeval/: .deepeval_telemetry.txt
util/opentelemetry-util-genai-traceloop-translator/examples/: traceloop_example.py  traceloop_processor_example.py
util/opentelemetry-util-genai-traceloop-translator/src/: opentelemetry_util_genai_traceloop_translator.pth
util/opentelemetry-util-genai-traceloop-translator/src/opentelemetry/util/genai/: version.py
util/opentelemetry-util-genai-traceloop-translator/src/opentelemetry/util/genai/emitters/: content_normalizer.py  message_reconstructor.py  traceloop_translator.py
util/opentelemetry-util-genai-traceloop-translator/src/opentelemetry/util/genai/processor/: __init__.py  content_normalizer.py  traceloop_span_processor.py
util/opentelemetry-util-genai-traceloop-translator/src/opentelemetry/util/genai/traceloop/: __init__.py
util/opentelemetry-util-genai-traceloop-translator/tests/: test_handler_attributes.py  test_span_processor_mapping.py  test_traceloop_integration.py  test_translator.py  test_translator_basic.py
(+232 files in other folders)
